[package]
name = "mttw"
version = "0.4.0"
edition = "2021"
description = "A wrapper for Meteotrentino open data"
license-file = "COPYING"
repository = "https://github.com/dnlmsr/mttw"
keywords = ["cli", "api", "weather"]
categories = ["api-bindings", "command-line-utilities"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0.91"
clap = { version = "3.2.8", features = ["derive"] }
chrono = "0.4.19"
toml = "0.5.9"
serde_derive = "1.0.149"
serde = "1.0.149"
dirs = "4.0.0"
